fix: Align all cards in a row with each other
References 177

--- a/styles/components/_trading-card-grid.scss
+++ b/styles/components/_trading-card-grid.scss
@@ -2,7 +2,7 @@
   width: 100%;
   margin: 0 auto;
   display: grid;
-  align-items: center;
+  align-items: start;
   justify-content: space-around;
   grid-template-columns: repeat(auto-fill, $trading-card-width);
   gap: space("xl") space("md");
